Basic _config.xml setup

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "About Me"
-  avatar           : "KAL-vsmall.jpg"
+  avatar           : "KAL-profile.png"
   bio              : "DevOps, Build and Release Expert"
   location         : "London, UK"
   employer         : "Micro Focus"
