--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /talks/    
 
   - title: "Templates"
-    url: /portfolio/
+    url: /templates/
 
   - title: "Coding"
     url: /coding/
