--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Templates"
     url: /templates/
 
-  - title: "Coding"
-    url: /coding/
+  - title: "Code"
+    url: /code/
         
   - title: "Blog"
     url: /year-archive/
