--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "About Me"
   avatar           : "KAL-profile.png"
-  bio              : "DevOps, Build and Release Expert"
+  bio              : "Enterprise DevOps, Build and Release Expert"
   location         : "London, UK"
   employer         : "Micro Focus"
   googlescholar    :
