--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,18 +3,15 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Presentations"
+    url: /presentations/
 
   - title: "Templates"
     url: /templates/
 
   - title: "Code"
     url: /code/
-        
-  - title: "Blog"
-    url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  - title: "Resume"
+    url: /resume/
 
