--- a/_config.yml
+++ b/_config.yml
@@ -73,10 +73,9 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  provider               : "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
-
+    tracking_id          : "UA-129581385-1"
 
 # Site Author
 author:
