--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site Settings
 locale                   : "en-GB"
-title                    : "Kevin A. Lee"
+title                    : "Kevin A. Lee's Portfolio"
 title_separator          : "-"
 name                     : &name "Kevin A. Lee"
-description              : &description "DevOps, Build and Release Expert"
+description              : &description "Enterprise DevOps, Build and Release Expert"
 url                      : https://akevinlee.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "akevinlee/akevinlee.github.io"
